--- a/files/resume.tex
+++ b/files/resume.tex
@@ -153,8 +153,8 @@
 \begin{document}
 \setlength{\footskip}{4.08003pt}
 
+\vspace{-7pt}
 \begin{center}
-
     {\Huge Kaifeng Zhang} \\ \vspace{4pt}
     \small
     % \faMobile \hspace{.5pt} \href{tel:905314204536}{+90 531 420 4536}
@@ -169,17 +169,17 @@
 
 
 
-\vspace{-3pt}
+\vspace{-10pt}
 \section{Education}
   \vspace{3pt}
   \resumeSubHeadingListStart
   % \resumeEducationHeading
   \resumeSubheading
-  {University of Illinois Urbana-Champaign}{Aug 2023 -- Now}
+  {University of Illinois Urbana-Champaign}{Aug 2023 -- Present}
   {Ph.D. in Computer Science}{Advisor: Professor Yunzhu Li}
     \resumeSubheading
       {Tsinghua University}{Sep 2019 -- Jun 2023}
-      {B.Eng. in Computer Science, Institute for Interdisciplinary Information Sciences}{}
+      {B.Eng. in Computer Science, Institute for Interdisciplinary Information Sciences}{Magna Cum Laude (GPA: 3.93/4.0)}
         \resumeItemListStart
             \resumeItem{\textbf{Visiting Student Intern} at University of California, San Diego from Feb 2022 to Jul 2022}
             \resumeItemListEnd
@@ -192,22 +192,29 @@
 \section{Research Experience}
   \vspace{3pt}
   \resumeSubHeadingListStart
-
     \resumeSubheading
-      {University of California, San Diego}{Feb 2022 -- Dec 2022}
+    {University of Illinois Urbana-Champaign}{Aug 2023 -- Present}
+    {Graduate Research Assistant}{Advisor: Professor Yunzhu Li}
+      \resumeItemListStart
+          \resumeItem{Research focus: robot learning and embodied machine learning.}
+      \resumeItemListEnd
+    
+    \vspace{3pt}
+    \resumeSubheading
+      {University of California, San Diego}{Feb 2022 -- Jul 2023}
       {Undergraduate Research Assistant}{Advisor: Professor Xiaolong Wang}
         \resumeItemListStart
-            \resumeItem{\textbf{Research focus}: self-supervised learning of 3D representations from videos. Worked on the task of self-supervised category-level 6D pose estimation 
-            from in-the-wild images. Results in submission to ICLR 2023. Currently also working on utilizing diffusion models for novel view synthesis.}
+            \resumeItem{Research focus: self-supervised learning of 3D representations; category-level object 6D pose estimation;
+             novel view synthesis and 3D content generation. One paper gets published at ICLR 2023.}
         \resumeItemListEnd
   
-    \vspace{4pt}
+    \vspace{3pt}
     \resumeSubheading
       {Tsinghua Vision and Robotics Lab}{Jun 2021 -- Jan 2022}
       {Undergraduate Research Assistant}{Advisor: Professor Yang Gao}
         \resumeItemListStart
-            \resumeItem{\textbf{Research focus}: contrastive learning, self-supervised learning of visual correspondences. Worked on leveraging
-            visual correspondence for label propagation and video object segmentation. Results published at ECCV 2022.}
+            \resumeItem{Research focus: contrastive learning; visual correspondence learning; 
+            self-supervised label propagation and video object segmentation. One paper gets published at ECCV 2022.}
         \resumeItemListEnd
     
   \resumeSubHeadingListEnd
@@ -219,19 +226,19 @@
   \vspace{3pt}
   \resumeSubHeadingListStart
 
-  \resumeSubtitle{\blue{Conference Publications}}
-  \resumeSubSubHeadingListStart
+  % \resumeSubtitle{\blue{Conference Publications}}
+  % \resumeSubSubHeadingListStart
   \resumePublicationHeading{Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild}{}
    {\textbf{Kaifeng Zhang}, Yang Fu, Shubhankar Borse, Hong Cai, Fatih Porikli, Xiaolong Wang}{}
    {in International Conference on Learning Representations (ICLR), 2023.}{}
    {\href{https://arxiv.org/abs/2210.07199}{\urlcolor{https://arxiv.org/abs/2210.07199}} ; 
     \href{https://kywind.github.io/self-pose}{\urlcolor{https://kywind.github.io/self-pose}}}{}
-  \vspace{-11pt}
+  \vspace{-5pt}
   \resumePublicationHeading{Semantic-Aware Fine-Grained Correspondence}{}
     {Yingdong Hu, Renhao Wang, \textbf{Kaifeng Zhang}, Yang Gao}{}
     {in European Conference on Computer Vision (ECCV), 2022. (\textbf{Oral presentation})}{}
     {\href{https://arxiv.org/abs/2207.10456}{\urlcolor{https://arxiv.org/abs/2207.10456}}}{}
-  \resumeSubSubHeadingListEnd
+  % \resumeSubSubHeadingListEnd
   
   \resumeSubHeadingListEnd
 
@@ -242,7 +249,7 @@
   \vspace{2pt}
   \resumeSubHeadingListStart
     \small{\item{
-        \textbf{Magna Cum Laude}, Tsinghua University, 2023. \\ \vspace{3pt}
+        % \textbf{Magna Cum Laude}, Tsinghua University, 2023. \\ \vspace{3pt}
 
         \textbf{Comprehensive Excellence Award}, Institute for Interdisciplinary Information Sciences, Tsinghua University, 2022. \\ \vspace{3pt}
 
@@ -268,14 +275,14 @@
           In collaboration with Peking University.}
     \resumeItemListEnd
     
-    % \resumeProjectHeading
-    %       {\textbf{Course Projects}}{}
-    %       \resumeItemListStart
-    %       \resumeItem{For courses: Computer Vision (A+), Intelligent System and Robotics, Natural Language Processing, Deep Learning}
-    %         % \resumeItem{Intelligent System and Robotics: Reinforcement Learning for Quadruped Locomotion with Visual Signals}
-    %         % \resumeItem{Natural Language Processing: Adversarial Attacks on Few-Shot Natural Language Understanding}
-    %         % \resumeItem{Deep Learning: Solving NP-Hard Problems from Single-bit Supervision with Graph Recurrent Neural Network}
-    %         \resumeItemListEnd
+    \resumeProjectHeading
+          {\textbf{Selected Course Projects}}{}
+          \resumeItemListStart
+          \resumeItem{Computer Vision (A+), Intelligent System and Robotics (A), Natural Language Processing (A), Deep Learning (A)}
+            % \resumeItem{Intelligent System and Robotics: Reinforcement Learning for Quadruped Locomotion with Visual Signals}
+            % \resumeItem{Natural Language Processing: Adversarial Attacks on Few-Shot Natural Language Understanding}
+            % \resumeItem{Deep Learning: Solving NP-Hard Problems from Single-bit Supervision with Graph Recurrent Neural Network}
+            \resumeItemListEnd
       
       
       
@@ -292,7 +299,7 @@
       \item{
         \textbf{Programming and Development Tools:} Python (PyTorch), C, C++; Linux, Git, Docker, Kubernetes, LaTeX, Blender } \\ \vspace{3pt}
         
-        % \textbf{Languages:}{ Chinese (Native), English (TOEFL 107, CET-6 657), Japanese (Elementary)}
+        % \textbf{Languages:}{ English, Chinese, Japanese}
     }
   \resumeSubHeadingListEnd
 
